[gd_scene load_steps=2 format=3 uid="uid://da016rfgwcoix"]

[ext_resource type="Script" uid="uid://dct1ikrnr87rg" path="res://control.gd" id="1_0fbet"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0fbet")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Titel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Wort Prüfen"
horizontal_alignment = 1

[node name="WordRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Wordinput" type="LineEdit" parent="MarginContainer/VBoxContainer/WordRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Wort Eingeben"

[node name="CheckButton" type="Button" parent="MarginContainer/VBoxContainer/WordRow"]
layout_mode = 2
text = "Prüfen
"

[node name="ResultLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
